--- a/docsTheme/partials/member.hbs
+++ b/docsTheme/partials/member.hbs
@@ -1,27 +1,22 @@
 <section class="tsd-panel tsd-member {{cssClasses}}">
     <a name="{{anchor}}" class="tsd-anchor"></a>
     {{#if name}}
-        <h3>{{#each flagsArray}}<span class="tsd-flag ts-flag{{this}}">{{this}}</span> {{/each}}{{{wbr name}}}</h3>
+        <h3>{{#each flags}}<span class="tsd-flag ts-flag{{this}}">{{this}}</span> {{/each}}{{{wbr name}}}</h3>
     {{/if}}
 
     {{#if signatures}}
         {{> member.signatures}}
+    {{else}}{{#if hasGetterOrSetter}}
+        {{> member.getterSetter}}
     {{else}}
         {{> member.declaration}}
-    {{/if}}
+    {{/if}}{{/if}}
 
-    {{#unless isContainer}}
-        {{#each groups}}
-            {{#each children}}
-                {{#unless hasOwnDocument}}
-                    {{> member}}
-                {{/unless}}
-            {{/each}}
+    {{#each groups}}
+        {{#each children}}
+            {{#unless hasOwnDocument}}
+                {{> member}}
+            {{/unless}}
         {{/each}}
-    {{/unless}}
+    {{/each}}
 </section>
-
-{{#if isContainer}}
-    {{> index}}
-    {{> members}}
-{{/if}}
