--- a/docsTheme/partials/member.sources.hbs
+++ b/docsTheme/partials/member.sources.hbs
@@ -6,7 +6,7 @@
         <p>Inherited from {{#with inheritedFrom}}{{> typeAndParent}}{{/with}}</p>
     {{/if}}
     {{#if overwrites}}
-        <p>Overrides {{#with overwrites}}{{> typeAndParent}}{{/with}}</p>
+        <p>Overwrites {{#with overwrites}}{{> typeAndParent}}{{/with}}</p>
     {{/if}}
     {{#if sources}}
         <ul>
