--- a/docs/theme/partials/header.hbs
+++ b/docs/theme/partials/header.hbs
@@ -2,7 +2,17 @@
     <div class="tsd-page-toolbar">
         <div class="container">
             <div class="table-wrap">
+
+                <!-- Overall title and Search -->
                 <div class="table-cell" id="tsd-search" data-index="{{relativeURL "assets/js/search.js"}}" data-base="{{relativeURL "./"}}">
+
+                    <!-- Title (with breadcrumbs) -->
+                    <ul class="tsd-breadcrumb title">
+                        <li>@awayjs</li>
+                        <li><a href="{{relativeURL "index.html"}}">{{project.name}}</a></li>
+                        {{#with model}}{{> breadcrumb}}{{/with}}
+                    </ul>
+
                     <div class="field">
                         <label for="tsd-search-field" class="tsd-widget search no-caption">Search</label>
                         <input id="tsd-search-field" type="text" />
@@ -12,10 +22,9 @@
                         <li class="state loading">Preparing search index...</li>
                         <li class="state failure">The search index is not available</li>
                     </ul>
-
-                    <a href="{{relativeURL "index.html"}}" class="title">{{project.name}}</a>
                 </div>
 
+                <!-- Filter -->
                 <div class="table-cell" id="tsd-widgets">
                     <div id="tsd-filter">
                         <a href="#" class="tsd-widget options no-caption" data-toggle="options">Options</a>
@@ -24,17 +33,15 @@
                             <label class="tsd-widget" for="tsd-filter-inherited">Show Inherited</label>
                         </div>
                     </div>
-
                     <a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Page title -->
     <div class="tsd-page-title">
         <div class="container">
-            <ul class="tsd-breadcrumb">
-                {{#with model}}{{> breadcrumb}}{{/with}}
-            </ul>
             <h1>{{#compact}}
                 {{model.kindString}}&nbsp;
                 {{model.name}}
